# theme-generator

./: .gitignore  Cargo.toml  README.md
presets/: dracula_based.sh  gruvbox_based.sh
preview/: .test.rs.swp  test.rs
scripts/: expect.sh  spawn_helix.sh
src/: main.rs
