[package]
name = "theme-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
crossterm = "0.27.0"
csv = "1.3.0"
palette = "0.7.5"
rand = "0.8.5"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
